// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Board All Filled Triangle 1`] = `
<div>
  <div
    className="board-row"
  >
    <button
      className="square"
      data-cy="square-0"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square"
      data-cy="square-1"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square"
      data-cy="square-2"
      onClick={[Function]}
    >
      △
    </button>
  </div>
  <div
    className="board-row"
  >
    <button
      className="square"
      data-cy="square-3"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square"
      data-cy="square-4"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square"
      data-cy="square-5"
      onClick={[Function]}
    >
      △
    </button>
  </div>
  <div
    className="board-row"
  >
    <button
      className="square"
      data-cy="square-6"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square"
      data-cy="square-7"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square"
      data-cy="square-8"
      onClick={[Function]}
    >
      △
    </button>
  </div>
</div>
`;

exports[`Storyshots Board Draw Board 1`] = `
<div>
  <div
    className="board-row"
  >
    <button
      className="square"
      data-cy="square-0"
      onClick={[Function]}
    >
      X
    </button>
    <button
      className="square"
      data-cy="square-1"
      onClick={[Function]}
    >
      O
    </button>
    <button
      className="square"
      data-cy="square-2"
      onClick={[Function]}
    >
      X
    </button>
  </div>
  <div
    className="board-row"
  >
    <button
      className="square"
      data-cy="square-3"
      onClick={[Function]}
    >
      X
    </button>
    <button
      className="square"
      data-cy="square-4"
      onClick={[Function]}
    >
      O
    </button>
    <button
      className="square"
      data-cy="square-5"
      onClick={[Function]}
    >
      O
    </button>
  </div>
  <div
    className="board-row"
  >
    <button
      className="square"
      data-cy="square-6"
      onClick={[Function]}
    >
      O
    </button>
    <button
      className="square"
      data-cy="square-7"
      onClick={[Function]}
    >
      X
    </button>
    <button
      className="square"
      data-cy="square-8"
      onClick={[Function]}
    >
      X
    </button>
  </div>
</div>
`;

exports[`Storyshots Board Empty Board 1`] = `
<div>
  <div
    className="board-row"
  >
    <button
      className="square"
      data-cy="square-0"
      onClick={[Function]}
    />
    <button
      className="square"
      data-cy="square-1"
      onClick={[Function]}
    />
    <button
      className="square"
      data-cy="square-2"
      onClick={[Function]}
    />
  </div>
  <div
    className="board-row"
  >
    <button
      className="square"
      data-cy="square-3"
      onClick={[Function]}
    />
    <button
      className="square"
      data-cy="square-4"
      onClick={[Function]}
    />
    <button
      className="square"
      data-cy="square-5"
      onClick={[Function]}
    />
  </div>
  <div
    className="board-row"
  >
    <button
      className="square"
      data-cy="square-6"
      onClick={[Function]}
    />
    <button
      className="square"
      data-cy="square-7"
      onClick={[Function]}
    />
    <button
      className="square"
      data-cy="square-8"
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`Storyshots Game Default 1`] = `
<div
  className="game"
>
  <div
    className="game-board"
  >
    <div>
      <div
        className="board-row"
      >
        <button
          className="square"
          data-cy="square-0"
          onClick={[Function]}
        />
        <button
          className="square"
          data-cy="square-1"
          onClick={[Function]}
        />
        <button
          className="square"
          data-cy="square-2"
          onClick={[Function]}
        />
      </div>
      <div
        className="board-row"
      >
        <button
          className="square"
          data-cy="square-3"
          onClick={[Function]}
        />
        <button
          className="square"
          data-cy="square-4"
          onClick={[Function]}
        />
        <button
          className="square"
          data-cy="square-5"
          onClick={[Function]}
        />
      </div>
      <div
        className="board-row"
      >
        <button
          className="square"
          data-cy="square-6"
          onClick={[Function]}
        />
        <button
          className="square"
          data-cy="square-7"
          onClick={[Function]}
        />
        <button
          className="square"
          data-cy="square-8"
          onClick={[Function]}
        />
      </div>
    </div>
  </div>
  <div
    className="game-info"
  >
    <div
      data-cy="game-status"
    >
      次のプレイヤー: X
    </div>
    <ol>
      <li>
        <button
          onClick={[Function]}
        >
          Go to game start
        </button>
      </li>
    </ol>
  </div>
</div>
`;

exports[`Storyshots Square Circle 1`] = `
<button
  className="square"
  data-cy="square-undefined"
>
  O
</button>
`;

exports[`Storyshots Square Cross 1`] = `
<button
  className="square"
  data-cy="square-undefined"
>
  X
</button>
`;
